--- a/app/assets/stylesheets/mobile/_progress_bars.sass
+++ b/app/assets/stylesheets/mobile/_progress_bars.sass
@@ -7,14 +7,51 @@
 .progress_bar_shadow
   height: 15px
 
+.progress_bar_outer,
+.progress_bar,
+.progress_bar_shadow,
+.progress_bar_cap
+  color: transparent
+  font-size: 0
+  line-height: 0
+
 .progress_wrap
+  @extend .clearfix
+  +border-radius(20px)
+  background: #eaeaec
   margin-bottom: 18px
+  padding: 6px
+  position: relative
 
 .progress_counter
+  text-align: center
+  width: 180px
+  height: 39px
+  line-height: 38px
+  position: absolute
   top: 20px
   font-size: 12px
+  right: 0
+
+.progress_bar_outer
+  background-color: #f9f9f9
+  margin-right: 180px
+  overflow: hidden
+  position: relative
+
+.progress_bar
+  +border-left-radius(14px)
+  background: #789d4a
+  border-right: 1px solid #808f6b
+  visibility: hidden
+
+.progress_bar_outer,
+.progress_bar_shadow
+  +border-radius(14px)
 
 .progress_bar_shadow
+  left: 6px
+  right: 186px
   +box-shadow(inset rgba(#000, 0.6) 0 1px 3px 0)
   position: relative
   top: -15px
@@ -24,3 +61,49 @@
 // right edge, in WebKit and Opera. Booh! :(
 .progress_bar_cap
   display: none
+
+.progress_percent_complete
+  +opacity(0)
+  visibility: hidden
+  background: image-url("progress_percent_complete.png")
+  color: #fff
+  line-height: 1
+  overflow: hidden
+  margin-left: -34px
+  padding-top: 10px
+  text-align: center
+  text-shadow: rgba(#000, 0.5) 0 1px 0
+  width: 68px
+  height: 33px
+  position: absolute
+  top: 14px
+
+.progress_wrap:hover .progress_percent_complete
+  +transition-property(all)
+  +transition-duration(0.25s)
+  +opacity(1)
+
+.progress_percent_complete b
+  display: block
+  font-size: 12px
+  margin-bottom: 2px
+
+.progress_percent_complete small
+  font-size: 10px
+
+// Widget sidebar overrides
+.widget .progress_wrap
+  margin-bottom: 0
+  margin: 10px
+
+.widget .progress_counter
+  width: 100px
+
+.widget .progress_bar_outer
+  margin-right: 100px
+
+.widget .progress_bar_cap
+  right: 104px
+
+.widget .progress_bar_shadow
+  right: 106px
