--- a/app/assets/stylesheets/mobile/_notifications.sass
+++ b/app/assets/stylesheets/mobile/_notifications.sass
@@ -1,44 +1,155 @@
-#header .user_options
-  position: static
+// !------ Edit email page
+.confirmation-message
+  background:
+    color: #d9e4c9
+    image: image-url("flash_notice.png")
+  background-repeat: no-repeat
+  color: #4b7518
+  border: 1px solid #91b164
+  font-size: 13px
+  padding: 10px 20px
 
-#header .friend-requests-btn,
-#header .notifications-btn
-  background: image-url("header-sprite.png") no-repeat
-  display: none
-  float: left
-  width: 40px
-  height: 40px
-  margin: 3px 0 0 15px
-  text-indent: 100%
-  overflow: hidden
-  white-space: nowrap
-  position: absolute
+// !------ Edit notifications page
+.notification-settings-group
+  margin-bottom: 0
 
-#header .friend-requests-btn.home-url,
-#header .notifications-btn.home-url
-  display: block
+  .settings-group-item
+    margin: 0 0 10px
+    border-bottom: 1px dotted #e1e1e1
 
-#header .header-popover ul
-  // default max-height is overridden by responsive height value set in page.js
-  max-height: 296px
-  overflow-x: auto
+    p
+      line-height: 1.3em
+      display: block
+      width: auto
+      padding: 0
+      margin-bottom: 5px
 
-#header .friend-requests-btn
-  background-position: 0px 9px
-  left: 38px
-  top: 0
+  .settings-group-email,
+  .settings-group-mobile
+    display: inline-block
+    background-color: #f6f6f6
+    padding: 3px 10px 0 5px
+    border-radius: 5px
+    margin: 5px 5px 15px 0
 
-#header .notifications-btn
-  background-position: 0px -50px
-  margin-left: 0px
-  margin-top: 3px
-  left: 95px
-  top: 0
+.notification-settings-group + div
+  text-align: center
+  margin: 0
+
+// !----------Notifications page
+
+.notifications-list
+  border-top: 1px solid #ccc
+
+.notifications-item
+  clear: both
+  overflow: auto
+  border-bottom: 1px solid #ddd
+
+  p
+    padding: 8px 8px 8px 0
+    margin-bottom: 0
+    line-height: 1.4em
+    float: left
+    width: 80%
+
+  img
+    height: 24px
+    width: 24px
+    float: left
+    display: block
+    margin: 10px
+    border-radius: 20px
+    border: 1px solid #ddd
+
+  .activity-timestamp
+    display: block
+    font-size: 12px
+
+.notifications-item:hover
+  background-color: #fefefe
+
+.notifications-empty
+  p
+    text-align: center
+
+article.social-requests ul
+  margin-bottom: 0
+
+
+
+// !Header > Friend Requests & Notifications
+//----------------------------------------------------------------------------------------------------
+
+#requests-menu
+  .requests-user-search
+    margin: 0 10px 15px
+
+  .requests-field-query
+    width: 100%
+    margin: 0
+
+  .requests-field-submit
+    margin: 0
+    padding: 10px
+
 
 #header
+  .friend-requests-btn,
+  .notifications-btn
+    display: none
+    background: image-url("header-sprite.png") no-repeat
+    float: left
+    width: 40px
+    height: 40px
+    margin: 3px 0 0 15px
+    text-indent: 100%
+    overflow: hidden
+    white-space: nowrap
+    position: absolute
+
+  .friend-requests-btn:hover,
+  .notifications-btn:hover
+    opacity: .5
+
+  .friend-requests-btn
+    background-position: 0px 9px
+    left: 38px
+    top: 0
+
+  .notifications-btn
+    background-position: 0px -50px
+    margin-left: 0px
+    margin-top: 3px
+    left: 95px
+    top: 0
+
+  .friend-requests-btn.home-url,
+  .notifications-btn.home-url
+    display: block
+
+#header
+  .arrow
+    background: image-url("popover-arrow.png") no-repeat
+    position: relative
+    top: -8px
+    left: 160px
+    display: block
+    width: 19px
+    height: 9px
+
+  .user_options
+    position: static
+
   .header-popover
+    position: absolute
     top: 46px
     left: 3px
+    width: 350px
+    border: 1px solid #d4d4d4
+    +border-radius(5px)
+    background: #fff
+    +box-shadow(0px 0px 8px #222)
     min-width: 98%
     max-width: 98%
     display: none
@@ -47,8 +158,115 @@
     .arrow
       left: 56px
 
+    .loading-indicator
+      text-align: center
+
+    .action_button_green,
+    .action_button_grey
+      font-weight: normal !important
+
+    ul
+      // default max-height is overridden by responsive height value set in page.js
+      margin-bottom: 0px
+      max-height: 296px
+      overflow-x: auto
+
+    .text-link
+      color: #0084c8
+      font-weight: bold
+      font-size: 12px
+      margin: 0px
+      padding: 0px
+      display: inline
+      line-height: 12px
+
+    .text-link.wide,
+    .text-wide
+      width: 100%
+      background: #eeedeb
+      text-align: center
+      display: block
+      padding: 12px 0px
+
+    .text-wide
+      font-size: 12px
+      line-height: 12px
+      font-weight: bold
+
+    .text-link.wide:hover
+      background: #f3f3f3
+
+#header
+  ul
+
+    h4
+      color: #505050
+      padding-left: 15px
+      line-height: 12px
+      margin-bottom: 10px
+
+    .find-friends
+      float: right
+      padding-right: 10px
+
+    .list-item.none
+      height: 40px
+
     .list-item
       height: 100px
+      border-top: 1px solid #d4d4d4
+      padding: 5px 10px 10px
+
+      .item-content
+        float: left
+        min-width: 70%
+
+        img
+          height: 48px
+          width: 48px
+          float: left
+          display: block
+          margin: 10px 10px 10px 0px
+          border-radius: 28px
+          border: 3px solid #ddd
+
+        p
+          line-height: 0px
+          margin: 20px 0px 0px
+          float: left
+
+          a
+            display: block
+            margin-bottom: 10px
+
+        .timestamp
+          color: #aaa
+          padding: 2px 10px 0px 22px
+          background: image-url("timestamp-icon.png") no-repeat left center
+          display: block
+          float: left
+          line-height: 20px
+          margin-top: 10px
+          font-size: 11px
+
+      .item-actions
+        float: right
+        min-width: 25%
+        margin-left: 4%
+
+        .action_button_green
+          color: #fff
+
+        .action_button_green,
+        .action_button_grey
+          padding: 4px 0px
+          text-align: center
+          font-size: 13px
+          margin: 0px
+          float: left
+          margin-top: 10px
+          width: 100%
+
 
   .header-popover.notifications
     left: 3px
@@ -58,6 +276,8 @@
       left: 97px
 
 .notify-item
+  +border-radius(3px)
+  background: #fff
   min-height: 100px
   padding: 0px 10px 10px 10px
   width: auto
@@ -69,38 +289,54 @@
     min-width: 70%
     max-width: 70%
 
+    img
+      height: 48px
+      width: 48px
+      float: left
+      display: block
+      margin: 0px 10px 10px 0px
+      border-radius: 28px
+      border: 3px solid #ddd
+
+    p
+
+      line-height: 1.5em
+      margin: 5px 0 0 0
+
+      a
+        display: block
+
+    .timestamp
+      color: #aaa
+      padding: 2px 10px 0px 22px
+      background: image-url("timestamp-icon.png") no-repeat left center
+      display: block
+      float: left
+      line-height: 20px
+      font-size: 11px
+
   .item-actions
     float: right
     min-width: 0
     margin: 0
 
-#requests-menu
-  .requests-user-search
-    margin: 0 10px 15px 
+    .action_button_green,
+    .action_button_blue
+      color: #fff
+      float: left
+      margin-right: 10px
+      padding: 4px 20px
+      margin-top: 10px
 
-  .requests-field-query
-    width: 100%
-    margin: 0
+    .action_button_green,
+    .action_button_blue,
+    .action_button_grey
+      padding: 6px 0px
+      text-align: center
+      font-size: 13px
+      float: left
+      margin: 10px 10px 0px 0px
+      min-width: 70px
 
-  .requests-field-submit
-    margin: 0     
-
-// ------ Edit notifications page
-
-.notification-settings-group
-
-  p
-    display: block
-    width: auto
-    padding: 0
-    margin-bottom: 5px
-
-  .settings-group-email,
-  .settings-group-mobile
-    margin: 5px 5px 15px 0
-
-.notification-settings-group + div
-  text-align: center
-  margin: 0
-
-
+    .action_button_grey
+      margin-right: 0px
