--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -37,6 +37,16 @@
 
 // -------------Mobile page
 
+
+#mobile_content .main
+  float: right
+  width: 60%
+
+#mobile_content .multilingual
+  width: 40%
+  float: left
+
+
 #main article.mobileapps
   font-size: 13px
   line-height: 1.7
@@ -47,7 +57,7 @@
     overflow: hidden
     margin-bottom: 10px
     width: auto
-    float: none !important
+    float: none
     h1
       line-height: 1.18em
 
@@ -75,42 +85,132 @@
         font-size: 12px
         margin: 0 0 5px 0
 
+      h2
+        font-weight: 200
+        font-size: 40px
+        line-height: 1.18em
+
 #mobile_downloads
-  float: none !important
+  float: none
   width: auto
   padding: 0
   border-left: 0
 
+  h3
+    font-size: 15px
+
+  ul
+    list-style: none
+
+    li
+      margin: 10px 0
+      padding-left: 30px
+
+
+    li a
+      font-weight: bold
+      color: $green
+
   .left_column
     float: left
     width: 50%
+
   .right_column
     float: left
     padding-left: 10px
     width: 46%
 
-#mobile_downloads a.cta
-  background: image-url("mobile_download.png") 14px center no-repeat #81a951 !important
-  display: block
-  padding: 15px 15px 12px 54px
-  border-radius: 4px
-  border: 1px #607346 solid
-  box-shadow: inset 0px 1px 0px rgba(#fff, .3)
-  overflow: hidden
-  clear: both
+#mobile_downloads
+
+  a.cta img
+    padding-right: 10px
+
+  a.cta h4
+    margin: 0px
+    padding: 0px
+    font-size: 16px
+    text-shadow: 0px 1px 0px rgba(0,0,0,.2)
+    color: #fff
+    float: left
+
+  a.cta span
+    text-shadow: 0px 1px 0px rgba(0,0,0,.2)
+    margin: 0px
+    padding: 0px
+    font-size: 13px
+    color: #fff
+    float: left
+
+  a.cta
+    background: image-url("mobile_download.png") 14px center no-repeat #81a951
+    display: block
+    padding: 15px 15px 12px 54px
+    border-radius: 4px
+    border: 1px #607346 solid
+    box-shadow: inset 0px 1px 0px rgba(#fff, .3)
+    overflow: hidden
+    clear: both
 
   img
     display: none
-a.cta h3
-  margin-bottom: 0
 
-#main section.testimonials ul li
-  padding: 5px 20px 10px 35px
-  margin: 0 0 10px
-  background: image-url("mobile_quote.png") no-repeat top left
-  float: none
-  width: auto
-  border-right: 0
+  a.cta h3
+    margin-bottom: 0
+
+#dl_iphone
+  background: image-url("mobile_dl_icons.png") 0px 0px no-repeat !important
+
+#dl_android
+  background: image-url("mobile_dl_icons.png") 0px -50px no-repeat !important
+
+#dl_blackberry
+  background: image-url("mobile_dl_icons.png") 0px -100px no-repeat !important
+
+#dl_windows
+  background: image-url("mobile_dl_icons.png") 0px -150px no-repeat !important
+
+#dl_windows8
+  background: image-url("mobile_dl_icons.png") 0px -150px no-repeat !important
+
+#dl_hppalm
+  background: image-url("mobile_dl_icons.png") 0px -200px no-repeat !important
+
+#dl_java
+  background: image-url("mobile_dl_icons.png") 0px -250px no-repeat !important
+
+#dl_symbian
+  background: image-url("mobile_dl_icons.png") 0px -300px no-repeat !important
+
+#dl_mobile
+  background: image-url("mobile_dl_icons.png") 0px -350px no-repeat !important
+
+#dl_amazon
+  background: image-url("mobile_dl_icons.png") 0px -400px no-repeat !important
+
+#main section.testimonials
+  h2
+    font-size: 18px
+    padding: 35px 0 15px 0
+    font-family: "Helvetica Neue", Helvetica, Sans-serif
+
+  ul li:last-child
+    border: 0
+
+  ul li h3
+    font-size: 13px
+    margin: 0
+    padding: 0
+
+  ul li p
+    margin: 3px 0 0 0
+
+  ul li
+    padding: 5px 20px 10px 35px
+    margin: 0 0 10px
+    background: image-url("mobile_quote.png") no-repeat top left
+    float: none
+    width: auto
+    border-right: 0
 
 // ----------------- Reading plans
 
@@ -284,8 +384,8 @@ article#plan-index dd.highlighted a,
 // ----------------- Reading plans
 
 article .none
-  padding-top: 44px 
-  
+  padding-top: 44px
+
 #subscriptions-index,
 #main article#plan-index
 
