--- a/app/assets/stylesheets/mobile/_ui_elements.sass
+++ b/app/assets/stylesheets/mobile/_ui_elements.sass
@@ -1,45 +1,509 @@
-// -----------------Calendar
-.cal_month
+// `Buttons + Drop-down
+//----------------------------------------------------------------------------------------------------
+
+.drop_down_arrow,
+.drop_down_select,
+.button
+  +box-shadow(#fff 0 1px 0 0)
+  +background-image(linear-gradient(#fff, #dddcda))
+  background-color: #eeedeb
+  display: block
+  line-height: 21px
+  position: relative
+  text-decoration: none
+
+.select_wrap,
+.drop_down_arrow,
+.drop_down_select,
+.button
+  +round
+  border: 1px solid #aaa
+
+.select_wrap
+  +background-image(linear-gradient(#fff, #dddcda))
+  +box-shadow(#fff 0 1px 0 0)
+  display: inline-block
+  vertical-align: top
+  height: 21px
+  position: relative
+  top: -3px
+
+.select_wrap span
+  +border-right-radius(3px)
+  background: image-url("select_wrap_span.png") no-repeat right center
+  display: inline-block
+  overflow: hidden
+  padding-right: 21px
+
+.select_wrap select
+  +border-radius(0)
+  background: none
+  border: 0
+  font-size: 12px
+  padding: 2px 0 0 5px
+  height: 21px
+  vertical-align: top
+  text-shadow: #fff 0 1px 0
+  width: 150%
+
+.select_wrap optgroup,
+.select_wrap option
+  text-shadow: none
+
+.select_wrap select:active,
+.select_wrap select:focus
+  +box-shadow(none)
+
+@media (-webkit-min-device-pixel-ratio: 0)
+  .select_wrap select
+    padding-right: 20px
+
+.button,
+.drop_down_arrow,
+.drop_down_select,
+.button:hover,
+.drop_down_arrow:hover,
+.drop_down_select:hover
+  color: $body_text
+
+.drop_down_select
+  padding-right: 23px
+  position: relative
+
+.button b,
+.drop_down_select b
+  display: block
+  font-size: 12px !important
+  padding: 0 10px
+  line-height: 21px
+  height: 21px
+
+.button b
+  background:
+    position: 10px center
+    repeat: no-repeat
+  padding-left: 30px
+
+.button sup
+  +border-radius(8px)
+  +box-shadow(rgba($blue_dark, 0.8) 0 0 0 1px)
+  +box-sizing(border-box)
+  +background-image(linear-gradient($blue_light, $blue))
+  background-color: $blue
+  color: #fff
+  font:
+    size: 11px
+    weight: bold
+  padding: 0 5px
+  text-align: center
+  text-shadow: rgba(#000, 0.5) 0 -1px 0
+  line-height: 16px
+  height: 16px
+  z-index: 1
+  position: absolute
+  top: -9px
+  right: -4px
+
+.drop_down_select b
+  border-right: 1px solid #aaa
+
+.drop_down_select span
+  +border-right-radius(2px)
+  background-color: rgba(#000, 0.08)
+  border-left: 1px solid rgba(#fff, 0.5)
+  position: absolute
+  top: 0
+  right: 0
+
+.button span,
+.drop_down_arrow span,
+.drop_down_select span
+  background:
+    repeat: no-repeat
+  color: transparent
+  display: block
+  font-size: 0
+  overflow: hidden
+  text-indent: -99999px
+  text-shadow: none
+  height: 21px
+
+.button span
+  background:
+    position: center center
+  width: 24px
+
+.drop_down_arrow span,
+.drop_down_select span
+  background:
+    image: image-url("drop_down_arrow.png")
+
+.drop_down_arrow span
+  background-position: 0 0
+  width: 21px
+
+.drop_down_select span
+  background-position: -42px 0
+  width: 22px
+
+.button:hover,
+.drop_down_arrow:hover,
+.drop_down_select:hover
+  +box-shadow(inset #fff 0 1px 0 0, #fff 0 1px 0 0)
+  +background-image(linear-gradient(#f1efec, #e0dedb))
+  background-color: #e0dedb
+
+.disabled.button:hover
+  +box-shadow(#fff 0 1px 0 0)
+  +background-image(linear-gradient(#fff, #dddcda))
+  background-color: #eeedeb
+
+.disabled.button:active
+  +box-shadow(#fff 0 1px 0 0)
+  +background-image(linear-gradient(#fff, #dddcda))
+  background-color: #eeedeb
+
+.button:active,
+.button:focus
+  +glow
+  +box-shadow(inset rgba(#000, 0.25) 0 1px 1px 0, #fff 0 1px 0 0)
+
+.li_active .dynamic_menu_trigger,
+.li_active .feaux_dynamic_trigger,
+.dynamic_menu_trigger:not(.no_style):active,
+.dynamic_menu_trigger:not(.no_style):focus,
+.feaux_dynamic_trigger:active,
+.feaux_dynamic_trigger:focus
+  +glow
+  +background-image(linear-gradient(#444, #222))
+  background-color: #222
+  border-color: #111
+
+.li_active .drop_down_arrow span,
+.drop_down_arrow:active span,
+.drop_down_arrow:focus span
+  background-position: -21px 0
+
+.li_active .drop_down_select span,
+.drop_down_select:active span,
+.drop_down_select:focus span
+  background-color: transparent
+  background-position: -63px 0
+  border-color: #555
+
+.li_active .dynamic_menu_trigger b,
+.dynamic_menu_trigger:active b,
+.dynamic_menu_trigger:focus b
+  border-color: #111
+  color: #fff
+  text-shadow: #000 0 -1px 0
+
+//
+// Clear selected verses button.
+//
+
+#clear_selected_verses
+  +border-right-radius(0)
+  float: left
+
+#clear_selected_verses + .button
+  +border-left-radius(0)
+  border-left: 0
+  float: left
+
+#clear_selected_verses + .button:after
+  content: ''
+  background: #fff
+  color: transparent
+  font-size: 0
+  overflow: hidden
+  width: 1px
+  position: absolute
+  top: 0
+  left: 0
+  bottom: 0
+
+#clear_selected_verses + .button:active:after,
+.li_active #clear_selected_verses + .button:after
+  background: rgba(#fff, 0.4)
+
+  //
+  // Color Picker
+  //
+
+.color_picker_list
+  float: left
   width: 100%
-  caption, th, td
+  margin-bottom: 15px
+
+
+.color_picker
+  +border-radius(4px)
+  background: image-url("menu_color_picker.png") center center no-repeat !important
+  height: 23px
+  width: 23px
+  display: block
+  float: left
+  margin-right: 5px
+  cursor: pointer
+
+.color
+  border-radius: 4px
+  height: 23px
+  width: 23px
+  display: block
+  float: left
+  margin-right: 5px
+  cursor: pointer
+
+  span
+    display: block
+    text-align: center
+    width: 23px
+    color: #FFF
+    overflow: hidden
+    text-indent: 100%
+    white-space: nowrap
+    background: image-url("menu_color_selected.png") no-repeat center 3px
+
+
+.color_picker_clear
+  background: image-url("menu_color_none.png") center center no-repeat
+  box-shadow: inset 0px 1px 0px #ddd
+  border-radius: 4px
+  height: 23px
+  width: 23px
+  display: block
+
+.color .selected, .color_picker_clear .selected
+  background: image-url("menu_color_selected.png") no-repeat
+  position: relative
+  width: 23px
+  height: 20px
+  top: 12px
+  left: 12px
+  display: block
+
+
+// UX has been changed for right now, this isn't needed
+// .color .selected:hover
+//  background-position: 0px -24px
+
+.remove_color
+  display: block
+  float: right
+  margin:
+    top: 15px
+    bottom: 15px
+  background: image-url("close_plain.png") no-repeat left center
+  padding:
+    left: 15px
+    top: 0px
+    bottom: 0px
+  text-align: right
+
+
+
+
+// `Icons
+//----------------------------------------------------------------------------------------------------
+
+.icon_x
+  background:
+    image: image-url("icon_x.png")
+
+.icon_listen
+  background:
+    image: image-url("icon_listen.png")
+    position: center 3px !important
+  &:active,
+  &:focus,
+  .li_active &
+    background:
+      position: center -47px !important
+
+.icon_listen.disabled
+  background:
+    image: image-url("icon_listen.png")
+    position: center -80px !important
+
+.icon_reader_settings
+  background:
+    image: image-url("icon_reader_settings.png")
+    position: center 3px !important
+  &:active,
+  &:focus,
+  .li_active &
+    background:
+      position: center -47px !important
+
+.icon_parallel
+  background:
+    image: image-url("icon_parallel.png")
+    position: center 3px !important
+  .parallel_mode &
+    background:
+      position: center -47px !important
+
+.icon_full_screen
+  background:
+    image: image-url("icon_full_screen.png")
+    position: 3px 4px !important
+  .full_screen &
+    background:
+      position: 4px -47px !important
+    width: 25px
+
+.icon_share
+  background:
+    image: image-url("icon_share.png")
+    position: 10px 4px !important
+  &:active,
+  &:focus,
+  .li_active &
+    background:
+      position: 10px -47px !important
+
+.icon_settings
+  background:
+    image: image-url("icon_settings.png")
+    position: center 3px !important
+  &:active,
+  &:focus,
+  .li_active &
+    background:
+      position: center -47px !important
+
+dd .icon_settings
+  background-repeat: no-repeat
+  background-position: center 7px !important
+  text-indent: -30000px
+  &:active,
+  &:focus,
+  .li_active &
+    background:
+      position: center -42px !important
+
+.icon_read
+  background:
+    image: image-url("icon_read.png")
+    position: center 3px !important
+  &:active,
+  &:focus,
+  .li_active &
+    background:
+      position: center -45px !important
+//
+// ` Calendar
+//
+
+.cal_month
+  display: inline-block
+  margin-right: 8px
+  font-family: helvetica
+  border-collapse: collapse
+  width: 100%
+
+  tbody
+    width: 100%
+
+  caption,
+  th,
+  td
     text-align: center
     width: 60px
+
   caption
+    padding: 5px 0px 4px
     font-weight: bold
-    padding-bottom: 4px
+    background: #ae1b1b /* Old browsers */
+    color: #fff
+    border: 0
+    border-top-left-radius: 2px
+    border-top-right-radius: 2px
+    text-align: center
     width: 100%
-  th
-    background-color: #ededed
-    border:
-      top: 1px solid #e1e1e1
-      left: 1px solid #e1e1e1
-      bottom: 1px solid #e1e1e1
-    color: #999
-  th:first-child
-    border-left: 0
+
+  thead
+    border-right: 1px #d5d0d0 solid
+    border-left: 1px #d5d0d0 solid
+
+    tr
+      background: #f8f8f8
+      font-size: 13px
+      color: #444
+
+      th
+        border-collapse: collapse
+        padding: 5px 8px
+        text-align: center
+        background-color: #ededed
+        border:
+          top: 1px solid #e1e1e1
+          left: 1px solid #e1e1e1
+          bottom: 1px solid #e1e1e1
+        color: #999
+
+      th:first-child
+        border-left: 0
+
   td
+    text-align: center
+    border-collapse: collapse
+    font-size: 12px
+    width: 35px
     border: 1px solid #e1e1e1
     vertical-align: middle
     height: 44px
     box-shadow: none
 
     a
+      font-size: 12px
+      color: #888
       font-weight: bold
       text-decoration: none
+      padding: 4px 7px 5px 7px
+      display: block
       height: 44px
       display: block
       line-height: 44px
 
+.cal_month
+  tr
+    border-collapse: collapse
+
+  td.disabled
+    background: #e9e9e9
+    box-shadow: 0px 1px 0px #f5f5f5 inset
+
+  td.today
+    background: #fff
+    font-weight: bold
+
+    a
+      color: #000 !important
+
   td.read
     font-weight: bold
-    background: image-url("cal_check.png") no-repeat top right
+    background: image-url("cal_check.png") no-repeat right top
 
-  td.read a
-    color: #888
-    background: none
+    a
+      color: #888
+      background: none
 
-.cal_month .active-day a
-  background: image-url("cal_bullet.png") center 36px no-repeat
+  td .inactive-day
+    color: #aaa
+    background-image: none
+    padding: 4px 0 5px 0px
+    display: block
+    height: 24px
+
+  .active-day a
+    background: image-url("cal_bullet.png") center 36px no-repeat
+
+  .hidden
+    height: 35px
+    padding: 0
 
 #main article .tab_navigation + table
   margin-top: 20px !important
@@ -68,4 +532,6 @@
   width: 33px
   height: 30px
 
-
+.mobile-client
+  #flash_notice, #flash_error
+    margin: 48px 0 0 0 !important
